part1: interactive music app using Tone.js

--- a/index.html
+++ b/index.html
@@ -12,13 +12,23 @@
     
     <!-- import the webpage's javascript file -->
     <script src="https://cdn.jsdelivr.net/npm/tone@14.7.39/build/Tone.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/nexusui@2.0.13/dist/NexusUI.min.js"></script>
     <script src="/script.js" defer></script>
   </head>  
   <body>
-    <button id="kick">
-      Kick
+    <label>
+      BPM <input id="bpm" type="range" min="30" max="300" value="120">
+    </label>
+
+    <button id="start">
+      Start
+    </button>
+    <button id="stop">
+      Stop
     </button>
 
+    <div id="sequencer">
+    </div>
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
