end of workshop

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     <br>
     <div id="sequencer">
     </div>
-    <br>
+    <!-- <br>
     <button id="generate-melody">
       Generate Melody
-    </button>
+    </button> -->
     <br>
     <button id="groove-drums">
       Generate Groovy Drums
